# func-cache

./: README.md  pyproject.toml
general_cache/: __init__.py  cached.py
