[tool.poetry]
name = "general-cache"
version = "0.1.1"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"
packages = [{ include = "general_cache" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
